MET-112 - Metering client demo - step 1 - basic metering examples - small fix for the pom file and the example file

--- a/metering-sample/pom.xml
+++ b/metering-sample/pom.xml
@@ -5,12 +5,24 @@
 
   <groupId>com.amberflo.metering.java</groupId>
   <version>1.0.0</version>
-  <artifactId>metering-sample</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>10</source>
+                    <target>10</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <artifactId>metering-sample</artifactId>
   <name>metering Sample</name>
 
   <dependencies>
     <dependency>
-      <groupId>com.amberflo.metering.java</groupId>
+      <groupId>io.amberflo</groupId>
       <artifactId>metering</artifactId>
       <version>1.0.0</version>
     </dependency>
