--- a/metering-sample/pom.xml
+++ b/metering-sample/pom.xml
@@ -24,8 +24,13 @@
       <dependency>
           <groupId>io.amberflo</groupId>
           <artifactId>metering-java-client</artifactId>
-          <version>1.3.0</version>
+          <version>1.3.4</version>
       </dependency>
+      <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongo-java-driver</artifactId>
+        <version>3.5.0</version>
+    </dependency>
   </dependencies>
 
 </project>
