--- a/metering-sample/pom.xml
+++ b/metering-sample/pom.xml
@@ -24,7 +24,13 @@
       <dependency>
           <groupId>io.amberflo</groupId>
           <artifactId>metering-java-client</artifactId>
-          <version>1.3.0</version>
+          <version>2.0.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.6</version>
+          <scope>compile</scope>
       </dependency>
   </dependencies>
 
